# multimodal-rag

./: .env.example  .gitignore  FRONTEND_ADJUSTMENTS.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  guide.txt  test.py
.github/workflows/: pages.yml
backend/: .dockerignore  .env.example  .gitignore  README.md  install_deps.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: chat.py  documents.py  upload.py
backend/app/core/: config.py
backend/app/db/: init_db.py
backend/app/models/: document.py
backend/app/repositories/: document_repo.py
backend/app/schemas/: document.py
backend/app/services/: llm_service.py  pdf_service.py  rag_service.py  summary_service.py  vector_service.py
backend/reference code/: test-llm.ipynb
backend/reference code/embeddings/: Qwen3_Embedding_0_6B.ipynb  inference_embeddinggemma_with_sentence_transformers.ipynb  jina_embeddings_v4.ipynb
docs/: README.md  index.html
frontend/: .dockerignore
frontend/src/components/: Chat.tsx  SidebarDocuments.tsx  UploadDropzone.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
scripts/: init-ollama.ps1  init-ollama.sh
